--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,8 @@
+<!--
+  Nikita Vinnik 312535529
+  Bar Salem 207351784
+  Netanel Aharoni 312541576
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
